Complete working products crud
